53 - removed dispatch from props, normalized buttons inside modals, fixed the bug with expand/collapse in tree

--- a/apps/lumina-core/src/components/lumina-modals/modals.module.scss
+++ b/apps/lumina-core/src/components/lumina-modals/modals.module.scss
@@ -8,7 +8,7 @@
   margin: 0 auto;
   width: 50%;
   padding: 40px;
-  border: 1px solid transparent;
+  border: 1px solid var(--lum-color-white);
   background: var(--lum-color-white);
   border-radius: 10px;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.06), 0px 4px 6px -1px rgba(0, 0, 0, 0.10);
